--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@ gltfアニメ再生用-->
 
     AFRAME.registerComponent('cursor-listener', {
         init: function () {
-            this.el.addEventListener('touchstart', function (evt) {
+            this.el.addEventListener('click', function (evt) {
               //↓超重要!
-                this.setAttribute('href', 'https://www.google.co.jp');
+              window.open('https://www.google.co.jp');
+                //this.setAttribute('href', 'https://www.google.co.jp');
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
             });
         }
@@ -52,16 +53,17 @@ gltfアニメ再生用-->
 
     AFRAME.registerComponent('tel-listener', {
         init: function () {
-            this.el.addEventListener('touchstart', function (evt) {
+            this.el.addEventListener('click', function (evt) {
               //↓超重要!
-                this.setAttribute('href', 'tel:09084644360');
+             window.open('tel:09084644360');
+                //this.setAttribute('href', 'tel:09084644360');
             });
         }
     });
 
     AFRAME.registerComponent('mail-listener', {
         init: function () {
-            this.el.addEventListener('touchstart', function (evt) {
+            this.el.addEventListener('click', function (evt) {
               //↓超重要!
                 this.setAttribute('href', 'mailto:testtest@gmail.com');
             });
