--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ gltfアニメ再生用-->
         init: function () {
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
-                this.setAttribute('href', 'mailto:testtest@gmail.com');
+              window.open('mailto:testtest@gmail.com');
+                //this.setAttribute('href', 'mailto:testtest@gmail.com');
             });
         }
     });
@@ -184,12 +185,15 @@ gltfアニメ再生用-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
 
-<a-plane id="box" width="1" height="1" material="src:#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-plane>
-<a-plane  id="boxa" width="1" height="1" material="src:#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-plane>
+<a-plane id="box" width="1" height="1" material="src:#img"  position="0 0 0.8" rotation="-90 0 0" tel-listener></a-plane>
+<!--link="href:tel:09000000000"-->
+<a-plane  id="boxa" width="1" height="1" material="src:#imga" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-plane>
+<!--link="href:mailto:testtest@gmail.com"-->
+
 <!--a-image id="box" width="1" height="1" src="#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-image>
 <a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image-->
 
-<a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" link="href:https://www.google.co.jp" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1 0 1.15" rotation="90 90 -90" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 
 <a-text id="text" position="-0.3 0.3 1.25" scale="0.4 0.4 0.4" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
