--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ gltfアニメ再生用-->
         init: function () {
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
-              window.open('https://www.google.co.jp');
+              window.location.href='https://www.google.co.jp';;
                 //this.setAttribute('href', 'https://www.google.co.jp');
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
             });
@@ -55,7 +55,7 @@ gltfアニメ再生用-->
         init: function () {
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
-             window.open('tel:09084644360');
+             window.location.href='tel:09084644360';;
                 //this.setAttribute('href', 'tel:09084644360');
             });
         }
@@ -65,7 +65,7 @@ gltfアニメ再生用-->
         init: function () {
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
-              window.open('mailto:testtest@gmail.com');
+              window.location.href='mailto:testtest@gmail.com';;
                 //this.setAttribute('href', 'mailto:testtest@gmail.com');
             });
         }
