--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ https://opensource.org/licenses/mit-license.php
 <meta charset="UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <!--meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"-->
-　<!--style type="text/css">
+　<style type="text/css">
     body{
       height: 100%;
       margin: 0;
@@ -24,7 +24,7 @@ https://opensource.org/licenses/mit-license.php
       padding: 0;
       width: 100%;
     }
-  </style-->
+  </style>
 <title>AR businessCard</title>
  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
@@ -120,7 +120,7 @@ gltfアニメ再生用-->
 
 </script>
 
-<body style='margin: 0; overflow: hidden;'>
+<body>
  <a-scene inspector="" renderer="antialias:true;gammaOutput:true;physicallyCorrectLights:true" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled:false" embedded arjs="debugUIEnabled:false;">
   <!--embedded arjs="sourceType: webcam;trackingMethod: best;patternRatio:0.80"-->
 
