--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ gltfアニメ再生用-->
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
               window.location.href='https://www.google.co.jp';
-              this.style.display = 'none';
                 //this.setAttribute('href', 'https://www.google.co.jp');
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
             }, false);
@@ -57,7 +56,6 @@ gltfアニメ再生用-->
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
              window.location.href='tel:09084644360';
-             this.style.display = 'none';
                 //this.setAttribute('href', 'tel:09084644360');
             }, false);
         }
@@ -68,7 +66,6 @@ gltfアニメ再生用-->
             this.el.addEventListener('click', function (evt) {
               //↓超重要!
               window.location.href='mailto:testtest@gmail.com';
-              this.style.display = 'none';
                 //this.setAttribute('href', 'mailto:testtest@gmail.com');
             }, false);
         }
@@ -137,9 +134,9 @@ gltfアニメ再生用-->
 
 
 
-<a-entity camera look-controls mouse-cursor>
-  <!--rayOrigin: mouse重要!-->
-  <a-entity cursor="fuse: false; fuseTimeout: 500;rayOrigin: mouse"
+<a-entity camera look-controls>
+  <!--cursor="rayOrigin: mouse"重要!-->
+  <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="-0.015 0.057 -2"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
