--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ gltfアニメ再生用-->
               window.location.href='https://www.google.co.jp';
                 //this.setAttribute('href', 'https://www.google.co.jp');
                 //console.log('I was clicked at: ', evt.detail.intersection.point);
-            });
+            },false);
         }
     });
 
@@ -57,7 +57,7 @@ gltfアニメ再生用-->
               //↓超重要!
              window.location.href='tel:09084644360';
                 //this.setAttribute('href', 'tel:09084644360');
-            });
+            },false);
         }
     });
 
@@ -67,7 +67,7 @@ gltfアニメ再生用-->
               //↓超重要!
               window.location.href='mailto:testtest@gmail.com';
                 //this.setAttribute('href', 'mailto:testtest@gmail.com');
-            });
+            },false);
         }
     });
 
@@ -136,8 +136,8 @@ gltfアニメ再生用-->
 
 
   <a-entity camera look-controls>
-  <!--cursor="rayOrigin: mouse"重要!-->
-  <a-entity cursor="fuse: false; fuseTimeout: 500;rayOrigin: mouse"
+  <!--cursor="rayOrigin: mouse"重要!fuseTimeout: 500;-->
+  <a-entity cursor="fuse: false;rayOrigin: mouse"
             position="-0.015 0.057 -2"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
