--- a/index.html
+++ b/index.html
@@ -137,12 +137,11 @@ gltfアニメ再生用-->
 
   <a-entity camera look-controls>
   <!--cursor="rayOrigin: mouse"重要!fuseTimeout: 500;-->
-  <a-entity cursor="fuse: false;rayOrigin: mouse"
+  <a-entity cursor="fuse: false;fuse-timeout:500;rayOrigin: mouse"
             position="-0.015 0.057 -2"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
-            material="color: white; shader: flat"
-            >
+            material="color: white; shader: flat">
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
