--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ gltfアニメ再生用-->
 <!--fuse="true" fuse-timeout="3000" -->
 
 <!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-face.patt" emitevents="true" cursor="rayOrigin: mouse" registerevents>
+<a-marker preset='custom' type='pattern' url="./pattern-face.patt" emitevents="true" registerevents>
 <!--a-link href="tel:09000000000" title="My Homepage" image="#imga" position="-1 0 -1" scale="0.3 0.3 0.3" rotation="-90 0 0"></a-link-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
