--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ Released under the MIT license
 https://opensource.org/licenses/mit-license.php
 -->
 
-
+<!--マーカーの中心位置が position="0 0 0"
+マーカーの大きさが scale="1 1 1"-->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -138,10 +139,11 @@ gltfアニメ再生用-->
   <a-entity camera look-controls>
   <!--cursor="rayOrigin: mouse"重要!fuseTimeout: 500;-->
   <a-entity cursor="fuse: false;fuse-timeout:500;rayOrigin: mouse"
-            position="-0.015 0.057 -2"
+            position="0 0 -1"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
             material="color: white; shader: flat">
+
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -187,21 +189,21 @@ gltfアニメ再生用-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
 
-<a-plane id="box" width="1.5" height="1.5" material="src:#img"  position="0 0 2.1" rotation="-90 0 0" tel-listener></a-plane>
+<a-plane id="box" width="1" height="1" material="src:#img"  position="-0.5 0 0" rotation="-90 0 0" tel-listener></a-plane>
 <!--link="href:tel:09000000000"-->
-<a-plane  id="boxa" width="1.5" height="1.5" material="src:#imga" position="2 0 2.1" rotation="-90 0 0" mail-listener></a-plane>
+<a-plane  id="boxa" width="1" height="1" material="src:#imga" position="0.5 0 0" rotation="-90 0 0" mail-listener></a-plane>
 <!--link="href:mailto:testtest@gmail.com"-->
 
 <!--a-image id="box" width="1" height="1" src="#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-image>
 <a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image-->
 
-<a-entity id="cg" gltf-model="#model" scale="0.05 0.05 0.05" position="-1.4 0 1.2" rotation="90 90 -90" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1.5 0 0" rotation="-90 90 -90" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 
-<a-text id="text" position="-0.4 0.3 0.5" scale="0.6 0.6 0.6" value="Selena Gomez" color="black" rotation="-90 0 0"></a-text>
+<a-text id="text" scale="0.6 0.6 0.6" value="Selena Gomez" position="-2 0.3 0.3" color="black" rotation="-90 0 0"></a-text>
 
 
-<a-plane id="plane" material="src:#vid" width="3.2" height="1.8" position="2.2 0 0.2" rotation="-90 0 0" play-listener></a-plane>
+<a-plane id="plane" material="src:#vid" width="1.6" height="0.9" position="0 0 -1" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
