--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ gltfアニメ再生用-->
 
 <script>
 
+/*
     AFRAME.registerComponent('cursor-listener', {
         init: function () {
             this.el.addEventListener('click', function (evt) {
@@ -51,24 +52,40 @@ gltfアニメ再生用-->
             },false);
         }
     });
+*/
 
-    AFRAME.registerComponent('tel-listener', {
+   AFRAME.registerComponent('cursor-listener',
+    {
+        init: function ()
+     {
+      this.el.addEventListener('click',function()
+      {
+      window.location.href='https://www.google.co.jp';
+      });
+    }
+    });
+
+
+    AFRAME.registerComponent('tel-listener',
+    {
         init: function () {
-            this.el.addEventListener('click', function (evt) {
+            this.el.addEventListener('click', function ()
+            {
               //↓超重要!
              window.location.href='tel:09000000000';
                 //this.setAttribute('href', 'tel:09000000000');
-            },false);
+            });
         }
     });
 
     AFRAME.registerComponent('mail-listener', {
         init: function () {
-            this.el.addEventListener('click', function (evt) {
+            this.el.addEventListener('click', function ()
+            {
               //↓超重要!
               window.location.href='mailto:testtest@gmail.com';
                 //this.setAttribute('href', 'mailto:testtest@gmail.com');
-            },false);
+            });
         }
     });
 
@@ -133,16 +150,17 @@ gltfアニメ再生用-->
   <video id="vid" src="warp1.m4v" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
 </a-assets>
 
-
-
-
-  <a-entity camera look-controls>
+<!--fuse="true" fuse-timeout="3000" -->
+<!--処理と反応速度、エリア改善のためraycaster必要!-->
+   <a-entity camera look-controls raycaster="objects: .collidable"></a-entity>
   <!--cursor="rayOrigin: mouse"重要!fuseTimeout: 500;-->
-  <a-entity cursor="fuse: false;fuse-timeout:500;rayOrigin: mouse"
+  <!--raycaster="showLine: true; far: 100" line="color: orange; opacity: 0.5"-->
+  <a-entity cursor="fuse: false;fuse-timeout:500;rayOrigin: mouse;"
             position="0 0 -1"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
-            material="color: white; shader: flat">
+            material="color: white; shader: flat"
+            raycaster="objects: .collidable">
 
         <!--a-animation 
              begin="mouseenter" 
@@ -181,29 +199,26 @@ gltfアニメ再生用-->
 
 </a-entity>
 </a-entity>
-<!--fuse="true" fuse-timeout="3000" -->
-
 <!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-face.patt" emitevents="true" registerevents>
+<a-marker preset='custom' type='pattern' url="./pattern-face.patt" emitevents="true" rotation="-90 0 0" registerevents>
 <!--a-link href="tel:09000000000" title="My Homepage" image="#imga" position="-1 0 -1" scale="0.3 0.3 0.3" rotation="-90 0 0"></a-link-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
-
-<a-plane id="box" width="1" height="1" material="src:#img"  position="-0.5 0 0" rotation="-90 0 0" tel-listener></a-plane>
+<a-plane id="box" class="collidable" width="1" height="1" material="src:#img"  position="-0.5 -1 0" rotation="-90 0 0" tel-listener></a-plane>
 <!--link="href:tel:09000000000"-->
-<a-plane  id="boxa" width="1" height="1" material="src:#imga" position="0.5 0 0" rotation="-90 0 0" mail-listener></a-plane>
+<a-plane  id="boxa" class="collidable" width="1" height="1" material="src:#imga" position="0.5 -1 0" rotation="-90 0 0" mail-listener></a-plane>
 <!--link="href:mailto:testtest@gmail.com"-->
 
 <!--a-image id="box" width="1" height="1" src="#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-image>
 <a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image-->
 
-<a-entity id="cg" gltf-model="#model" scale="0.03 0.03 0.03" position="-1.5 0 0" rotation="-90 90 -90" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" class="collidable" gltf-model="#model" scale="0.03 0.03 0.03" position="-1.5 -1 0" rotation="-90 90 -90" animation-mixer cursor-listener></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 
-<a-text id="text" scale="0.6 0.6 0.6" value="Selena Gomez" position="-2 0.3 0.3" color="black" rotation="-90 0 0"></a-text>
+<a-text id="text" scale="0.6 0.6 0.6" value="Selena Gomez" position="-2 -1 0" color="black" rotation="-90 0 0"></a-text>
 
 
-<a-plane id="plane" material="src:#vid" width="1.6" height="0.9" position="0 0 -1" rotation="-90 0 0" play-listener></a-plane>
+<a-plane id="plane" class="collidable" material="src:#vid" width="1.6" height="0.9" position="0 -1 -1" rotation="-90 0 0" play-listener></a-plane>
 </a-marker>
 
 
@@ -240,6 +255,7 @@ gltfアニメ再生用-->
   <a-cube id="target2" color="#666" position="1 0 0">
   </a-cube>
  -->
+
 
 </a-scene>
 
