--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@ gltfアニメ再生用-->
             position="0 0 -1"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
-            material="color: white; shader: flat"
-            raycaster="objects: .collidable">
+            material="color: white; shader: flat">
 
         <!--a-animation 
              begin="mouseenter" 
