--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ gltfアニメ再生用-->
             scale="0.02 0.02 0.02"
             material="color: white; shader: flat">
 
+<!--raycaster="objects: .collidable"-->
         <!--a-animation 
              begin="mouseenter" 
              easing="ease-out" 
@@ -199,25 +200,69 @@ gltfアニメ再生用-->
 </a-entity>
 </a-entity>
 <!-- マーカーを登録（hololo testマーカー） -->
-<a-marker preset='custom' type='pattern' url="./pattern-face.patt" emitevents="true" rotation="-90 0 0" registerevents>
+<a-marker preset='custom' type='pattern' url="./pattern-face.patt" emitevents="true" rotation="-90 0 0"registerevents>
 <!--a-link href="tel:09000000000" title="My Homepage" image="#imga" position="-1 0 -1" scale="0.3 0.3 0.3" rotation="-90 0 0"></a-link-->
 <!--a-entity geometry="primitive: box;width:0.7;height:0.7;depth:0.1" link="href:https://www.yahoo.co.jp" id="box" material="src:./face.jpg" position="0 0 0.9" rotation="-90 0 0" scale="1 1 1" tel-listener></a-entity-->
 
-<a-plane id="box" class="collidable" width="1" height="1" material="src:#img"  position="-0.5 -1 0" rotation="-90 0 0" tel-listener></a-plane>
+<a-plane id="box" class="collidable" width="1" height="1" material="src:#img;transparent: true;"  position="-0.5 -1 0" rotation="-90 0 0" tel-listener
+animation__in="property: components.material.material.opacity;
+               from: 1;
+               to: 0.75;
+               dur: 100;
+               startEvents: mouseenter"
+animation__out="property: components.material.material.opacity;
+               from: 0.75;
+               to: 1;
+               dur: 100;
+               startEvents: mouseleave"></a-plane>
 <!--link="href:tel:09000000000"-->
-<a-plane  id="boxa" class="collidable" width="1" height="1" material="src:#imga" position="0.5 -1 0" rotation="-90 0 0" mail-listener></a-plane>
+<a-plane  id="boxa" class="collidable" width="1" height="1" material="src:#imga" position="0.5 -1 0" rotation="-90 0 0" mail-listener
+animation__in="property: components.material.material.opacity;
+               from: 1;
+               to: 0.75;
+               dur: 100;
+               startEvents: mouseenter"
+animation__out="property: components.material.material.opacity;
+               from: 0.75;
+               to: 1;
+               dur: 100;
+               startEvents: mouseleave"></a-plane>
 <!--link="href:mailto:testtest@gmail.com"-->
 
 <!--a-image id="box" width="1" height="1" src="#img" link="href:tel:09000000000" position="0 0 0.8" rotation="-90 0 0" tel-listener></a-image>
 <a-image id="boxa" width="1" height="1" src="#imga" link="href:mailto:testtest@gmail.com" position="0 0 -1.15" rotation="-90 0 0" mail-listener></a-image-->
 
-<a-entity id="cg" class="collidable" gltf-model="#model" scale="0.03 0.03 0.03" position="-1.5 -1 0" rotation="-90 90 -90" animation-mixer cursor-listener></a-entity>
+<a-entity id="cg" class="collidable" gltf-model="#model" scale="0.03 0.03 0.03" position="-1.5 -1 0" rotation="-90 90 -90" animation-mixer cursor-listener
+animation__in="property: scale;
+               to: 0.04 0.04 0.04;
+               dur: 100;
+               startEvents: mouseenter"
+animation__out="property: scale;
+               to: 0.03 0.03 0.03;
+               dur: 100;
+               startEvents: mouseleave"></a-entity>
 <!--link="href:https://www.google.co.jp"-->
 
 <a-text id="text" scale="0.6 0.6 0.6" value="Selena Gomez" position="-2 -1 0" color="black" rotation="-90 0 0"></a-text>
 
 
-<a-plane id="plane" class="collidable" material="src:#vid" width="1.6" height="0.9" position="0 -1 -1" rotation="-90 0 0" play-listener></a-plane>
+<a-plane id="plane" class="collidable" material="src:#vid" width="1.6" height="0.9" position="0 -0.9 -1" rotation="-90 0 0" play-listener
+animation__in1="property: width;
+               to: 2;
+               dur: 100;
+               startEvents: mouseenter"
+animation__out1="property: width;
+               to: 1.6;
+               dur: 100;
+               startEvents: mouseleave"
+animation__in2="property: height;
+               to: 1.125;
+               dur: 100;
+               startEvents: mouseenter"
+animation__out2="property: height;
+               to: 0.9;
+               dur: 100;
+               startEvents: mouseleave"></a-plane>
 </a-marker>
 
 
