--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@ gltfアニメ再生用-->
             position="0 0 -1"
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
-            material="color: white; shader: flat">
+            material="color: white; shader: flat"
+            raycaster="objects: .collidable">
 
 <!--raycaster="objects: .collidable"-->
         <!--a-animation 
