--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ gltfアニメ再生用-->
 
 <!--fuse="true" fuse-timeout="3000" -->
 <!--処理と反応速度、エリア改善のためraycaster必要!-->
-   <a-entity camera look-controls raycaster="objects: .collidable"></a-entity>
+   <a-entity camera look-controls></a-entity>
   <!--cursor="rayOrigin: mouse"重要!fuseTimeout: 500;-->
   <!--raycaster="showLine: true; far: 100" line="color: orange; opacity: 0.5"-->
   <a-entity cursor="fuse: false;fuse-timeout:500;rayOrigin: mouse;"
