--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ gltfアニメ再生用-->
     {
         init: function ()
      {
-      this.el.addEventListener('touchstart',function()
+      this.el.addEventListener('click',function()
       {
       window.location.href='https://www.google.co.jp';
       });
@@ -69,7 +69,7 @@ gltfアニメ再生用-->
     AFRAME.registerComponent('tel-listener',
     {
         init: function () {
-            this.el.addEventListener('touchstart', function ()
+            this.el.addEventListener('click', function ()
             {
               //↓超重要!
              window.location.href='tel:09000000000';
@@ -80,7 +80,7 @@ gltfアニメ再生用-->
 
     AFRAME.registerComponent('mail-listener', {
         init: function () {
-            this.el.addEventListener('touchstart', function ()
+            this.el.addEventListener('click', function ()
             {
               //↓超重要!
               window.location.href='mailto:testtest@gmail.com';
@@ -101,6 +101,7 @@ gltfアニメ再生用-->
     });
 */
 
+/*
     AFRAME.registerComponent('play-listener',
     {
         init: function ()
@@ -117,7 +118,7 @@ gltfアニメ再生用-->
       });
     }
     });
-
+*/
 /*
 
         AFRAME.registerComponent('registerevents', {
