--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ gltfアニメ再生用-->
      {
       this.el.addEventListener('mouseup',function()
       {
-      //window.location.href='https://www.google.co.jp';
-      window.open('https://www.google.co.jp');
+      window.location.href='https://www.google.co.jp';
+      //window.open('https://www.google.co.jp');
       });
     }
     });
@@ -73,8 +73,8 @@ gltfアニメ再生用-->
             this.el.addEventListener('mouseup', function ()
             {
               //↓超重要!
-             //window.location.href='tel:09000000000';
-             window.open('tel:09000000000');
+             window.location.href='tel:09000000000';
+             //window.open('tel:09000000000');
                 //this.setAttribute('href', 'tel:09000000000');
             });
         }
@@ -85,8 +85,8 @@ gltfアニメ再生用-->
             this.el.addEventListener('mouseup', function ()
             {
               //↓超重要!
-              //window.location.href='mailto:testtest@gmail.com';
-              window.open('mailto:testtest@gmail.com');
+              window.location.href='mailto:testtest@gmail.com';
+              //window.open('mailto:testtest@gmail.com');
                 //this.setAttribute('href', 'mailto:testtest@gmail.com');
             });
         }
