--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ gltfアニメ再生用-->
     {
         init: function ()
      {
-      this.el.addEventListener('mouseup',function()
+      this.el.addEventListener('click',function()
       {
       window.location.href='https://www.google.co.jp';
       //window.open('https://www.google.co.jp');
@@ -70,7 +70,7 @@ gltfアニメ再生用-->
     AFRAME.registerComponent('tel-listener',
     {
         init: function () {
-            this.el.addEventListener('mouseup', function ()
+            this.el.addEventListener('click', function ()
             {
               //↓超重要!
              window.location.href='tel:09000000000';
@@ -82,7 +82,7 @@ gltfアニメ再生用-->
 
     AFRAME.registerComponent('mail-listener', {
         init: function () {
-            this.el.addEventListener('mouseup', function ()
+            this.el.addEventListener('click', function ()
             {
               //↓超重要!
               window.location.href='mailto:testtest@gmail.com';
@@ -164,7 +164,7 @@ gltfアニメ再生用-->
             geometry="primitive: ring"
             scale="0.02 0.02 0.02"
             material="color: white; shader: flat"
-            raycaster="objects: .collidable;far: 20; interval: 1000;"
+            raycaster="objects: .collidable;far: 20;"
             >
             <!--cursor="rayOrigin: mouse;"-->
 
