--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ gltfアニメ再生用-->
 
 <a-assets>
   <a-asset-item id="model" crossOrigin="anonymous" src="./gltf/Pagoda.glb"></a-asset-item>
-  <img id="img" crossOrigin="anonymous" src="./face.jpg"></img>
-  <img id="imga" crossOrigin="anonymous" src="./unnamed.jpg"></img>
+  <img id="img" crossOrigin="anonymous" src="./face_b.jpg"></img>
+  <img id="imga" crossOrigin="anonymous" src="./unnamed_b.jpg"></img>
   <video id="vid" src="warp1.m4v" crossOrigin="anonymous" muted autoplay="true" playsinline webkit-playsinline loop="true"></video>
 </a-assets>
 
