--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ gltfアニメ再生用-->
     {
         init: function ()
      {
-      this.el.sceneEl.addEventListener('click',function(evt)
+      this.el.addEventListener('click',function(evt)
       {
-      if (evt.detail.intersectedEl === undefined) { return; }
       window.location.href='https://www.google.co.jp';
+
       //window.open('https://www.google.co.jp');
       },false);
     }
@@ -73,9 +73,9 @@ gltfアニメ再生用-->
     AFRAME.registerComponent('tel-listener',
     {
         init: function () {
-            this.el.sceneEl.addEventListener('click', function (evt)
+            this.el.addEventListener('click', function (evt)
             {
-              if (evt.detail.intersectedEl === undefined) { return; }
+    
               //↓超重要!
              window.location.href='tel:09000000000';
              //window.open('tel:09000000000');
@@ -86,9 +86,9 @@ gltfアニメ再生用-->
 
     AFRAME.registerComponent('mail-listener', {
         init: function () {
-            this.el.sceneEl.addEventListener('click', function (evt)
+            this.el.addEventListener('click', function (evt)
             {
-              if (evt.detail.intersectedEl === undefined) { return; }
+
               //↓超重要!
               window.location.href='mailto:testtest@gmail.com';
               //window.open('mailto:testtest@gmail.com');
@@ -116,9 +116,9 @@ gltfアニメ再生用-->
      {
       let vid = document.querySelector("#vid");
       vid.pause();
-      this.el.sceneEl.addEventListener('mouseenter',function(evt)
+      this.el.addEventListener('mouseenter',function(evt)
       {
-      if (evt.detail.intersectedEl === undefined) { return; }
+
       vid.play();
       },false);
       this.el.addEventListener('mouseleave',function(evt)
