--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://opensource.org/licenses/mit-license.php
     }
   </style>
 <title>AR businessCard</title>
- <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+ <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
   <!--script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script-->
   <!--script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script-->
@@ -40,6 +40,24 @@ gltfアニメ再生用-->
 </head>
 
 <script>
+
+
+document.getElementById("request_permission").addEventListener("click", function(){
+  if (
+    DeviceMotionEvent &&
+    DeviceMotionEvent.requestPermission &&
+    typeof DeviceMotionEvent.requestPermission === 'function'
+  ) {
+    DeviceMotionEvent.requestPermission();
+  }
+  if (
+    DeviceOrientationEvent &&
+    DeviceOrientationEvent.requestPermission &&
+    typeof DeviceOrientationEvent.requestPermission === 'function'
+  ) {
+    DeviceOrientationEvent.requestPermission();
+  }
+})
 
 /*
     AFRAME.registerComponent('cursor-listener', {
