--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ gltfアニメ再生用-->
      {
       this.el.addEventListener('click',function(evt)
       {
-      window.location.href='https://www.google.co.jp';
+      //window.location.href='https://www.google.co.jp';
 
-      //window.open('https://www.google.co.jp');
+      window.open('https://www.google.co.jp');
       },false);
     }
     });
